Improve the description of daemon in manpage

--- a/kbfsd.5
+++ b/kbfsd.5
@@ -55,6 +55,10 @@ variables:
 is an
 .Xr rc 8
 daemon for the Keybase filesystem (KBFS).
+Its aim is to ease the process of using KBFS on
+.Fx .
+It takes care of the configuration the Keybase user would have to do manually
+otherwise.
 .Pp
 .Nm
 has to configure some bits of the system in order to mount KBFS as
