--- a/kbfsd.5
+++ b/kbfsd.5
@@ -24,7 +24,7 @@
 .\" CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
-.Dd August 20, 2018
+.Dd November 13, 2018
 .Dt KBFSD 5
 .Os
 .Sh NAME
@@ -112,7 +112,7 @@ variables:
 .Bl -tag -width kbfsd_keybase_username
 .It Va kbfsd_enable
 .Pq Vt bool , No default: Dq Li NO
-Run
+Enable
 .Nm .
 .It Va kbfsd_keybase_username
 .Pq Vt str , No default: Va kbfsd_user
