--- a/kbfsd.5
+++ b/kbfsd.5
@@ -24,7 +24,7 @@
 .\" CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
-.Dd November 13, 2018
+.Dd May 16, 2019
 .Dt KBFSD 5
 .Os
 .Sh NAME
@@ -154,7 +154,7 @@ the
 .Dq Li nostart
 KEYWORD
 .Pq see Xr rc 8 for details .
-The reason is that in order to reliably mount KBFS the user has to be establish
+The reason is that in order to reliably mount KBFS the user has to establish
 a session with the Keybase server first.
 This is done by calling:
 .Dq Li keybase login Ar username .
