Improve mdoc formatting of a PID file

--- a/kbfsd.5
+++ b/kbfsd.5
@@ -128,7 +128,9 @@ It cannot be empty.
 .El
 .Sh FILES
 .Bl -tag -width "/home/${kbfsd_user}/.config/keybase/kbfsd.${kbfsd_user}.pid" -compact
-.It Pa "/home/${kbfsd_user}/.config/keybase/kbfsd.${kbfsd_user}.pid"
+.Sm off
+.It Pa /home/ No ${ Ar kbfsd_user No } Pa /.config/keybase/kbfsd\&. No ${ Ar kbfsd_user No } Pa ".pid"
+.Sm on
 PID file.
 .El
 .Sh EXIT STATUS
