--- a/kbfsd.5
+++ b/kbfsd.5
@@ -1,7 +1,7 @@
 .\"
 .\" SPDX-License-Identifier: BSD-2-Clause
 .\"
-.\" Copyright (c) 2018-2020 Mateusz Piotrowski <0mp@FreeBSD.org>
+.\" Copyright (c) 2018-2021 Mateusz Piotrowski <0mp@FreeBSD.org>
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions are met:
@@ -24,32 +24,28 @@
 .\" CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
-.Dd August 24, 2019
+.Dd July 22, 2021
 .Dt KBFSD 5
 .Os
 .Sh NAME
 .Nm kbfsd
 .Nd service daemon for the Keybase filesystem (KBFS)
 .Sh SYNOPSIS
-The required
+Required
 .Xr rc.conf 5
 variables:
-.Bl -item -compact
-.It
-.Va kbfsd_enable Ns = Ns Qq Li NO
-.It
-.Va kbfsd_user Ns = Ns Qq Ar user
-.El
+.Bd -literal -offset indent
+kbfsd_enable="YES"
+kbfsd_user="beastie"
+.Ed
 .Pp
 Optional
 .Xr rc.conf 5
 variables:
-.Bl -item -compact
-.It
-.Va kbfsd_keybase_username Ns = Ns Qq Li "${" Ns Va kbfsd_user Ns Li "}"
-.It
-.Va kbfsd_mountpoint Ns = Ns Qq Pa /keybase
-.El
+.Bd -literal -offset indent
+kbfsd_keybase_username="${kbfsd_user}"
+kbfsd_mountpoint="/keybase"
+.Ed
 .Sh DESCRIPTION
 .Nm
 is an
